--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,22 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    steps:
 
+
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: root
+          POSTGRES_DB: simple_bank
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    steps:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
@@ -21,6 +35,9 @@ jobs:
 
     - name: Check out code into go module directory
       uses: actions/checkout@v4
+
+    - name: Run migrations
+      run: make migrateup
 
     - name: Test
       run: make test
