update sql query

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -22,3 +22,4 @@ sql:
         emit_prepared_queries: false
         emit_exact_table_names: false
         emit_json_tags: true
+        emit_empty_slices: true
