--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -18,7 +18,7 @@ sql:
         package: "db"
         out: "./db/sqlc"
         sql_package: "database/sql"
-        emit_interface: false
+        emit_interface: true
         emit_prepared_queries: false
         emit_exact_table_names: false
         emit_json_tags: true
